Made updates to the connect box to fix a clear fix issue. Also updated font size on the portfolio...still can't figure out why the stackoverflow icon is larger then the others...

--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,21 @@ h2 {
   padding: 0;
 }
 
+#github {
+  height: 58px;
+  width: 58px;
+}
+
+#linkedin {
+  height: 58px;
+  width: 58px;
+}
+
+#stackoverflow {
+  height: 58px;
+  width: 58px;
+}
+
 #form-name {
   padding: 10px;
 }
@@ -214,7 +229,7 @@ width: 275px;
 .box h1 {
   height: 15%;
   width: 255px;
-  font-size: 15px;
+  font-size: 24px;
   padding: 10px;
   background-color: #4aaaa5;
   color: white;
